[package]
name = "facet-urlencoded"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "URL encoded form serialization and deserialization for Facet types"
keywords = ["urlencoded", "form", "serialization", "deserialization", "facet"]
categories = ["encoding", "parsing", "data-structures"]
rust-version.workspace = true

[dependencies]
facet-core = { path = "../facet-core" }
facet-poke = { path = "../facet-poke" }
form_urlencoded = "1.2.1"
log = "0.4.27"

[dev-dependencies]
facet-derive = { path = "../facet-derive" }
