[package]
name = "facet-urlencoded"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "URL encoded form serialization and deserialization for Facet types"
keywords = ["urlencoded", "form", "serialization", "deserialization", "facet"]
categories = ["encoding", "parsing", "data-structures"]
rust-version.workspace = true

[dependencies]
facet = { path = "../facet", version = "0.1.18", features = ["reflect"] }
form_urlencoded = "1.2.1"
log = "0.4.27"

[dev-dependencies]
facet = { path = "../facet", version = "0.1.18", features = [
    "reflect",
    "derive",
] }
