[package]
name = "facet-yaml"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "YAML serialization and deserialization for Facet types"
keywords = ["yaml", "serialization", "deserialization", "reflection", "facet"]
categories = ["encoding", "parsing", "data-structures"]

[dependencies]
yaml-rust2 = "0.10.0"
facet = { path = "../facet", version = "0.1.18", features = ["reflect"] }

[dev-dependencies]
facet = { path = "../facet", version = "0.1.18", features = ["derive"] }
