[package]
name = "facet-codegen"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
minijinja = { version = "2.9.0", default-features = false, features = [
    "builtins",
] }
