[package]
name = "shapely-derive-test"
version = "0.1.0"
edition = "2024"
authors = ["Amos Wenger <amos@bearcove.eu>"]
description = "Test crate for shapely derive macros"
repository = "https://github.com/bearcove/shapely"
publish = false

[dependencies]
shapely = { version = "0.1.0", path = "../shapely", features = ["derive"] }
